# hatch

./: .gitignore  Cargo.toml  README.md  index.toml
.github/scripts/: gen-index.py
.github/workflows/: deploy-site.yml  ensure-publish-dispatched.yml  publish-docs-sweep.yml  publish-pkg.yml  publish-plugin.yml  publish-sweep.yml  regression.yml  sync-index.yml
cli/: Cargo.toml
cli/src/: main.rs
docs/: game-engine-parity-status.md  hatch-fsm-design.md
examples/: README.md
examples/fsm-game-flow/: hatchfile  main.wren
examples/game/ecs/: hatchfile  (+1 more)
scripts/: mint-ci-token.sh  promote_doc_comments.py  publish-missing.sh  redispatch-publish-pkg.sh  spec-docker-run.sh  spec-docker.Dockerfile  spec-docker.sh
site/: Dockerfile  Dockerfile.local-test  fly.toml  hatchfile  main.wren  run-aot.sh
site/content/: authoring.md  cli.md  hatchfile.md  install.md  intro.md
site/lib/: api.wren  badge.wren  catalog.wren  lifecycle.wren
site/views/: 404.html  blog.html  docs.html  docs_layout.html  guide.html  index.html  layout.html  package.html  package_api.html  package_changelog.html
supabase/: .gitignore  README.md  config.toml
supabase/migrations/: 20260429164527_unify_hatch_owner.sql  20260429164800_relax_name_ownership_for_bot.sql  20260429165240_hatch_config_table.sql  20260429165241_relax_name_ownership_for_bot.sql  20260429165241_unify_hatch_owner.sql  20260429165242_unify_hatch_owner.sql  20260501120000_packages_homepage_readme.sql  20260502010000_packages_docs_url.sql  20260502020000_packages_readme_url.sql  20260604120000_packages_changelog_url.sql
(+91 files in other folders)
