[package]
name = "hatch-cli"
version = "0.1.0"
edition = "2021"
authors = ["Damilare Akinlaja <damilare@zenturi.co>"]
description = "Packaging, dependency resolution, and registry tooling for wrenlift .hatch packages"
repository = "https://github.com/wrenlift/hatch"
license = "MIT"

[[bin]]
name = "hatch"
path = "src/main.rs"

[dependencies]
# Depends on the wrenlift library for the .hatch format + VM loader.
# Git dep so this repo is self-contained — no sibling checkout
# required. Pin to a commit or tag once we start cutting releases.
wren_lift = { git = "https://github.com/wrenlift/WrenLift.git", default-features = false, features = ["cranelift"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
